--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     <script src="components/classifieds/classifieds.ctr.js"></script>
     <script src="components/new/classifieds.new.ctr.js"></script>
     <script src="components/edit/classifieds.edit.ctr.js"></script>
+    <script src="components/classifieds/card/classified-card.dir.js"></script>
     <script src="components/classifieds/classifieds.fac.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.min.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/4.8.1/firebase.js"></script>
+
 </body>
 
 </html>
